Runtime rule hot-update for MAL and LAL
Adds /runtime/rule/{addOrUpdate,inactivate,delete,list,bundled,dump,get} on a
new admin port (default 17128, disabled by default) for cluster-wide MAL/LAL
rule management — push, soft-pause, drop, list, dump, single-rule fetch. The
endpoint converges through a single elected main per (catalog, name) with
Suspend/Resume RPCs broadcast to peers across the OAP cluster bus. Rules are
stored in the management storage layer (BanyanDB / Elasticsearch / JDBC) so
hot-updates survive OAP restart — at boot the merged view of bundled YAML and
persisted runtime rows takes effect without a regression to defaults.

The endpoint has no built-in authentication: operators must gateway-protect
it with IP allow-lists and never expose it to the public internet.

Engine model
------------
Three layers, with one boundary between each:

  scheduler (DSLManager + REST handler)  — DSL-agnostic. Lock acquisition,
      cluster Suspend/Resume RPC fan-out, persistence, classloader graveyard,
      cross-file ownership enforcement, tick scheduling, self-heal.
  orchestrators (DSLRuntimeApply, DSLRuntimeUnregister, DSLRuntimeDelete) —
      drive the per-DSL phase pipeline through the engine SPI.
  engines (MalRuleEngine, LalRuleEngine) — DSL-specific. Implement compile /
      verify / commit / rollback / unregister / dropBackend / reloadStatic
      against a per-engine ApplyContext; classify, claimedKeys, storageImpactKeys
      drive cross-DSL routing and the storage-change guardrail.

DSLClassLoaderManager (server-core)
-----------------------------------
Process-wide singleton that owns every per-file RuleClassLoader. Boot-time
bundled rules continue to load into the OAP main classloader (shared); per-
file `static:` loaders only mint after a runtime override is removed and the
bundled YAML must serve again. Loader name format
`<kind>:<catalog>/<rule>@<MMdd-HHmmss>` is observable in stack traces and the
graveyard's INFO/WARN log lines. The manager run